<resources>
    <string name="app_name">MyBOA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entry">Entry</string>
    <string name="welcome">Welcome</string>
    <string name="fragment_add">fragment_add</string>
    <string name="fragment_money">fragment_money</string>
    <string name="fragment_more">fragment_more</string>
    <string name="fragment_table">fragment_table</string>
    <string name="fragment_tax">fragment_tax</string>
    <string name="material_is_good">Material is Good</string>
    <string name="balance">余额</string>
    <string name="owe_num">欠款</string>
    <string name="test_owe">这是欠款画面</string>
    <string name="test_balance">这是余额画面</string>
    <string name="wechat_pay">微信钱包</string>
    <string name="zero">0.00</string>
    <string name="hint_text">微信钱包余额</string>
    <string name="alipay">支付宝</string>
    <string name="alipay_num">支付宝余额</string>
    <string name="cash">现金</string>
    <string name="cash_num">现金总数</string>
    <string name="lent_text">应收账</string>
    <string name="others_owe_me">别人欠我的钱</string>
    <string name="credit_card">银行卡余额</string>
    <string name="in_bank">在储蓄卡中的余额</string>
    <string name="invess_text">投资账户</string>
    <string name="invest_account">投资账户上的资金</string>
    <string name="back">返回</string>
    <string name="add_account">请选择账户类型</string>
    <string name="balance_type">余额类型</string>
    <string name="owe_type">欠款类型</string>
    <string name="huabei">蚂蚁花呗</string>
    <string name="jd">京东白条</string>
    <string name="credit_owe">信用卡</string>
    <string name="borrow">借款</string>
    <string name="total_owe">总欠款</string>
    <string name="totalbalance">总余额</string>
    <string name="select_date">请选择日期</string>
    <string name="select_item">请选择账户</string>
    <string name="input_count">请输入金额</string>
    <string name="select_type">请选择消费用途</string>
    <string name="cost">消费</string>
    <string name="income">收入</string>
    <string name="eat">吃</string>
    <string name="drink">喝</string>
    <string name="month_income">月收入</string>
    <string name="income_hint">请输入薪酬（月）</string>
    <string name="insurance">社保扣除额度</string>
    <string name="insurance_hint">请输入社保扣除额(月)</string>
    <string name="house_insurance_hint">请输入公积金费用（月）</string>
    <string name="son_education">子女教育</string>
    <string name="son_education_hint">请输入子女教育额度（月）</string>
    <string name="self_education">继续教育</string>
    <string name="self_education_hint">请输入继续教育额度（月）</string>
    <string name="house_rent">房贷（房租）</string>
    <string name="house_rent_hint">请输入房贷或房租（月）</string>
    <string name="raise_old">赡养老人</string>
    <string name="raise_old_hint">请输入赡养老人额度（月）</string>
    <string name="house_insurance">住房公积金</string>
    <string name="computer">计算</string>
    <string name="reset">重置</string>
    <string name="login">立即登录</string>
    <string name="tips">登陆后可以备份数据到服务器哦！</string>
    <string name="update">数据上传</string>
    <string name="download">数据同步</string>
    <string name="about_me">关于我</string>
    <string name="name">姓名：刘森宇</string>
    <string name="phone">电话：18520047192</string>
    <string name="teacher">指导老师：韦老师</string>
    <string name="class_room">计科5班</string>
    <string name="github_id_senyusama">github ID :SenYusama</string>
    <string name="title_activity_login">登录您的帐号</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_out">退出登录</string>
</resources>
