<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".activity.AddItemActivity">
<RelativeLayout
    android:id="@+id/head_rl_add_item"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_45">
    <RelativeLayout
        android:id="@+id/back_rl"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/back_iv"
            android:src="@drawable/back"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            />
        <TextView
            android:layout_toEndOf="@+id/back_iv"
            android:textColor="@color/selectedBlue"
            android:textSize="@dimen/sp_17"
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_24" />
    </RelativeLayout>
    <TextView
        android:textSize="20sp"
        android:text="@string/add_account"
        android:textColor="@color/gray"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/head_rl_add_item"
        android:background="@color/gray_cc"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/text_balance_type"
            android:textSize="@dimen/sp_16"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/balance_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/cash_ll"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/white"
            android:layout_below="@id/text_balance_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_margin="@dimen/dp_8"
                android:src="@drawable/cash"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32" />
            <TextView
                android:layout_marginStart="@dimen/dp_10"
                android:textSize="@dimen/sp_22"
                android:layout_gravity="center"
                android:text="@string/cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/invest_ll"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/white"
            android:layout_below="@id/cash_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_margin="@dimen/dp_8"
                android:src="@drawable/invest"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32" />
            <TextView
                android:layout_marginStart="@dimen/dp_10"
                android:textSize="@dimen/sp_22"
                android:layout_gravity="center"
                android:text="@string/invess_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bank_ll"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/white"
            android:layout_below="@id/invest_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_margin="@dimen/dp_8"
                android:src="@drawable/credit_card"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32" />
            <TextView
                android:layout_marginStart="@dimen/dp_10"
                android:textSize="@dimen/sp_22"
                android:layout_gravity="center"
                android:text="@string/credit_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lent_ll"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/white"
            android:layout_below="@id/bank_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_margin="@dimen/dp_8"
                android:src="@drawable/lent"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32" />
            <TextView
                android:layout_marginStart="@dimen/dp_10"
                android:textSize="@dimen/sp_22"
                android:layout_gravity="center"
                android:text="@string/lent_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wechat_ll"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/white"
            android:layout_below="@id/lent_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_margin="@dimen/dp_8"
                android:src="@drawable/wechat_green"
                android:layout_width="@dimen/sp_32"
                android:layout_height="@dimen/sp_32" />
            <TextView
                android:layout_marginStart="@dimen/dp_10"
                android:textSize="@dimen/sp_22"
                android:layout_gravity="center"
                android:text="@string/wechat_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alipay_ll"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/white"
            android:layout_below="@id/wechat_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_margin="@dimen/dp_8"
                android:src="@drawable/alipay_blue"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32" />
            <TextView
                android:layout_marginStart="@dimen/dp_10"
                android:textSize="@dimen/sp_22"
                android:layout_gravity="center"
                android:text="@string/alipay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_owe_type"
            android:textSize="@dimen/sp_16"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_below="@id/alipay_ll"
            android:text="@string/owe_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/huabei_ll"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/white"
            android:layout_below="@id/text_owe_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_margin="@dimen/dp_8"
                android:src="@drawable/huabei_blue"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32" />
            <TextView
                android:layout_marginStart="@dimen/dp_10"
                android:textSize="@dimen/sp_22"
                android:layout_gravity="center"
                android:text="@string/huabei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/jd_ll"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/white"
            android:layout_below="@id/huabei_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_margin="@dimen/dp_8"
                android:src="@drawable/jd_red"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32" />
            <TextView
                android:layout_marginStart="@dimen/dp_10"
                android:textSize="@dimen/sp_22"
                android:layout_gravity="center"
                android:text="@string/jd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/credit_owe_ll"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/white"
            android:layout_below="@id/jd_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_margin="@dimen/dp_8"
                android:src="@drawable/credit_owe"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32" />
            <TextView
                android:layout_marginStart="@dimen/dp_10"
                android:textSize="@dimen/sp_22"
                android:layout_gravity="center"
                android:text="@string/credit_owe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/borrow_ll"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/white"
            android:layout_below="@id/credit_owe_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_margin="@dimen/dp_8"
                android:src="@drawable/borrow"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32" />
            <TextView
                android:layout_marginStart="@dimen/dp_10"
                android:textSize="@dimen/sp_22"
                android:layout_gravity="center"
                android:text="@string/borrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
</ScrollView>