<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:background="@drawable/cash_bg"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    >
    <ImageView
        android:id="@+id/iv_img"
        android:src="@drawable/cash"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginLeft="6dp"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/iv_img"
        android:text="@string/cash"
        android:textColor="@color/seaMeatWhite"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:textColor="@color/eggWhite"
        android:layout_toRightOf="@id/iv_img"
        android:text="@string/cash_num"
        android:textSize="13sp"
        />
    <TextView
        android:id="@+id/cash_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="15sp"
        android:paddingEnd="10dp"
        android:textColor="@color/seaMeatWhite"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        />
</RelativeLayout>