<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray_8f"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddRecordActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
    <TextView
        android:layout_centerInParent="true"
        android:textColor="@color/orange"
        android:background="@drawable/tv_bg"
        android:textSize="15sp"
        android:gravity="center"
        android:id="@+id/select_date"
        android:layout_centerHorizontal="true"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/select_date"
        />
        </RelativeLayout>
        <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
            <TextView
                android:layout_centerInParent="true"
                android:textColor="@color/orange"
                android:background="@drawable/tv_bg"
                android:textSize="15sp"
                android:gravity="center"
                android:id="@+id/select_record_type"
                android:layout_centerHorizontal="true"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:text="@string/select_type"
                />
    </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">
    <TextView
        android:layout_centerInParent="true"
        android:textColor="@color/orange"
        android:background="@drawable/tv_bg"
        android:textSize="15sp"
        android:gravity="center"
        android:id="@+id/select_item"
        android:layout_centerHorizontal="true"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/select_item"
        />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">
    <EditText
        android:layout_centerInParent="true"
        android:textColor="@color/orange"
        android:background="@drawable/tv_bg"
        android:textSize="15sp"
        android:gravity="center"
        android:id="@+id/count_et"
        android:layout_centerHorizontal="true"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:hint="@string/input_count"
        android:inputType="numberDecimal"
        />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>